2016-11-27  Per Bothner  <per@bothner.com>

	* CompileInvoke.java: Fix two bugs relating to splices.
	(validateNamedInvoke): Fix adjustment of splice start.
	Also, call PrimProcedure.canCompile to check if we can.

2016-04-21  Per Bothner  <per@bothner.com>

	* ClassMethods.java (removeRedundantMethods): Use new Type.isSame.
	This fixes Savannah bug #47725 "Same method candidate found twice
	causing warning".

2016-03-08  Per Bothner  <per@bothner.com>

	* CompileReflect.java (validateApplySlotGet):
	If no slot is found, emit warning, not error.
	Don't emit either if type is 'dynamic'.

2016-02-11  Per Bothner  <per@bothner.com>

	* MultValuesType.java (isCompatibleWithValue): New method.

2015-10-23  Per Bothner  <per@bothner.com>

	* CompileBuildObject.java: Various fixes and improvements.
	(hasAddChildMethod): Use getAddChildMethodName instead of always "add".
	(make): Fix warning message.
	(findNamedMember): Likewise.
	(make): Allow binding to be a class value, not just a string name.
	(make): Use context ClassLoader.

2015-06-08  Per Bothner  <per@bothner.com>

	* CompileBuildObject.java: Re-write keyword handling.
	(keywordStart): Replace field by method.
	(numKeywordArgs): New methods.
	* CompileInvoke.java: Update accordingly.
	(hasKeywordArgument): Remove method.

2015-06-07  Per Bothner  <per@bothner.com>

	* CompileBuildObject.java (make): If type is a LangObjType,
	call the latter's getBuildObject method.

2015-06-03  Per Bothner  <per@bothner.com>

	* CompileArrays.java (compileSet): Get a truncating StackTarget.

2015-02-26  Per Bothner  <per@bothner.com>

	* TypeSwitch.java (compile): Fix handling of toStringType.

2015-02-12  Per Bothner  <per@bothner.com>

	* SingletonType.java: Implement Externalizable.
	(writeExternal, readExternal, readResolve): New methods.
	* MultValuesType.java (writeExternal, readExternal): New methods.

2015-02-01  Per Bothner  <per@bothner.com>

	* CompileReflect.java (validateApplyTypeSwitch): Set PASSES_TAILCALLS.
