@@ -1,3 +1,7 @@
+2016-12-03  Per Bothner  <per@bothner.com>
+
+	* CompileInvoke.java (validateNamedInvoke): Handle parameterized List type.
+
 2016-11-27  Per Bothner  <per@bothner.com>
 
 	* CompileInvoke.java: Fix two bugs relating to splices.
